--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -1103,7 +1103,7 @@
       Index = 10
       Text = ("Style")
       { ScrollView9 ScrollView
-        MoveScaled(0,0,59,61)
+        MoveScaled(1,0,59,61)
         Tag = "style"
         Expand = True
         Arrangement = Arrange.Vertical
@@ -1133,8 +1133,30 @@
             Text = ("Show covers in listviews")
           }
         }
+        { NoParseStyle3 HBox
+          MoveScaled(1,11,50,4)
+          Spacing = True
+          { FontLabel3 Label
+            MoveScaled(1,1,17,3)
+            AutoResize = True
+            Text = ("Default icon size")
+          }
+          { VBox5 VBox
+            MoveScaled(21,0,3,4)
+            Expand = True
+          }
+          { IconsizeCombobox ComboBox
+            MoveScaled(24,0,10,3)
+            ReadOnly = True
+            List = [("16"), ("24"), ("32"), ("48"), ("64"), ("96"), ("128"), ("192"), ("256")]
+          }
+          { BackResetButton4 ToolButton
+            MoveScaled(41,1,4,4)
+            Picture = Picture["icon:/16/clear"]
+          }
+        }
         { NoParse30 HBox
-          MoveScaled(1,9,50,4)
+          MoveScaled(1,17,50,4)
           Spacing = True
           { HighlightCHK CheckBox
             MoveScaled(-1,0,48,4)
@@ -1144,10 +1166,10 @@
           }
         }
         { NOPARSESEPARATOR1 Separator
-          MoveScaled(1,14,50,0.5714)
+          MoveScaled(1,22,50,0.5714)
         }
         { NoParseStyle1 HBox
-          MoveScaled(1,15,50,4)
+          MoveScaled(1,24,50,4)
           Spacing = True
           { FontLabel1 Label
             MoveScaled(1,1,17,3)
@@ -1176,7 +1198,7 @@
           }
         }
         { NoParseStyle2 HBox
-          MoveScaled(1,20,50,4)
+          MoveScaled(0,29,50,4)
           Spacing = True
           { FontLabel2 Label
             MoveScaled(2,1,23,3)
@@ -1200,7 +1222,7 @@
           }
         }
         { NoParseStyle5 HBox
-          MoveScaled(1,25,50,5)
+          MoveScaled(1,34,50,5)
           Spacing = True
           { FontLabel4 Label
             MoveScaled(0,1,30,3)
@@ -1224,10 +1246,10 @@
           }
         }
         { NOPARSESEPARATOR2 Separator
-          MoveScaled(1,30,50,0.5714)
+          MoveScaled(1,40,50,0.5714)
         }
         { NoParseStyle8 HBox
-          MoveScaled(1,32,50,4)
+          MoveScaled(1,41,50,4)
           Spacing = True
           { FontLabel7 Label
             MoveScaled(1,1,17,3)
@@ -1256,7 +1278,7 @@
           }
         }
         { NoParseStyle7 HBox
-          MoveScaled(1,36,50,4)
+          MoveScaled(0,47,50,4)
           Spacing = True
           { FontLabel6 Label
             MoveScaled(1,1,23,3)
@@ -1280,10 +1302,10 @@
           }
         }
         { NOPARSESEPARATOR3 Separator
-          MoveScaled(1,41,50,0.5714)
+          MoveScaled(0,52,50,0.5714)
         }
         { NoParseStyle6 HBox
-          MoveScaled(1,43,50,4)
+          MoveScaled(1,53,50,4)
           Spacing = True
           { FontLabel5 Label
             MoveScaled(1,1,17,3)
@@ -1312,9 +1334,6 @@
             Background = &HFFFFFF&
             Picture = Picture["icon:/16/color"]
           }
-        }
-        { NOPARSESEPARATOR4 Separator
-          MoveScaled(1,48,50,0.5714)
         }
       }
       Index = 0
