Runtime error when a youtube link was added into playlist

--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -1159,7 +1159,7 @@
             MoveScaled(31,1,10,3)
             #Public = True
             ReadOnly = True
-            List = [("16"), ("24"), ("32"), ("48"), ("64"), ("96"), ("128"), ("192"), ("256")]
+            List = [("16"), ("24"), ("32"), ("48"), ("64"), ("96"), ("128"), ("160")]
             Text = ("24")
           }
           { BackResetButton4 ToolButton
