Avodi updatesearchresults() twice at startup

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -1618,7 +1618,7 @@
               MoveScaled(27,0,4,4)
               Font = Font["6"]
               AutoResize = True
-              Picture = Picture["speaker.png"]
+              Picture = Picture["icon:/22/volume"]
             }
             { SaveVolumeSlider Slider
               MoveScaled(34,0,13,4)
