Added opensubtitles.org menu under the existent subtitle menu (still inactive)

--- a/.src/Form/FMain.form
+++ b/.src/Form/FMain.form
@@ -62,6 +62,9 @@
         { StreamsSubtitlesMenu Menu
           Text = ("Subtitles")
           Picture = Picture["icon:/small/font"]
+          { MenuOpenSubtitlesOrg Menu
+            Text = ("OpenSubtitles.org")
+          }
         }
       }
     }
