--- a/.src/Form/GeneralOptions.form
+++ b/.src/Form/GeneralOptions.form
@@ -861,7 +861,7 @@
             Visible = False
             Expand = True
             ReadOnly = True
-            List = [("zh,chi,zho (chinese)"), ("nl,dut,nld (dutch,flemish)"), ("en,eng (english)"), ("fi,fin (finnish)"), ("fr,fre (french)"), ("de,ger,deu (german)"), ("it,ita (italian)"), ("ja,jpn  (japanese)"), ("no,nor (norwegian)"), ("pt,por (portuguese)"), ("ru,rus (russian)"), ("es,spa (spanish)"), ("sv,swe (swedish)")]
+            List = [("alb,sq,(Albanian)"), ("ara,ar,(Arabic)"), ("arm,hy,(Armenian)"), ("baq,eu,(Basque)"), ("ben,bn,(Bengali)"), ("bos,bs,(Bosnian)"), ("bre,br,(Breton)"), ("bul,bg,(Bulgarian)"), ("cat,ca,(Catalan)"), ("cze,cs,(Czech)"), ("dan,da,(Danish)"), ("de,ger,deu (german)"), ("ell,el,(Greek)"), ("en,eng (english)"), ("epo,eo,(Esperanto)"), ("es,spa (spanish)"), ("est,et,(Estonian)"), ("fi,fin (finnish)"), ("fr,fre (french)"), ("geo,ka,(Georgian)"), ("glg,gl,(Galician)"), ("heb,he,(Hebrew)"), ("hin,hi,(Hindi)"), ("hrv,hr,(Croatian)"), ("hun,hu,(Hungarian)"), ("ice,is,(Icelandic)"), ("ind,id,(Indonesian)"), ("it,ita (italian)"), ("ja,jpn (japanese)"), ("kaz,kk,(Kazakh)"), ("kor,ko,(Korean)"), ("lav,lv,(Latvian)")].Insert([("lit,lt,(Lithuanian)"), ("ltz,lb,(Luxembourgish)"), ("mac,mk,(Macedonian)"), ("may,ms,(Malay)"), ("nl,dut,nld (dutch,flemish)"), ("no,nor (norwegian)"), ("oci,oc,(Occitan)"), ("per,fa,(Farsi)"), ("pob,pb,(Portuguese-BR)"), ("pol,pl,(Polish)"), ("pt,por (portuguese)"), ("ru,rus (russian)"), ("rum,ro,(Romanian)"), ("scc,sr,(Serbian)"), ("sin,si,(Sinhalese)"), ("slo,sk,(Slovak)"), ("slv,sl,(Slovenian)"), ("sv,swe (swedish)"), ("syr,sy,(Syriac)"), ("tgl,tl,(Tagalog)"), ("tha,th,(Thai)"), ("tur,tr,(Turkish)"), ("ukr,uk,(Ukrainian)"), ("urd,ur,(Urdu)"), ("vie,vi,(Vietnamese)"), ("zh,chi,zho (chinese)")])
             Text = ("iso-8859-1")
           }
           { Button1 Button
@@ -886,14 +886,14 @@
         }
         { NoParse17 HBox
           MoveScaled(1,13,48,4)
-          ToolTip = ("Add the selected language to the list of preferred languages.\nMplayer Option:\n-slang \"language list\"")
+          ToolTip = ("Add the selected language to the list of preferred languages.\nMplayer Option:\n-slang \"language list\"\n\nThis option also allows you to search for online subtitles at Opensubtitles.org")
           Spacing = True
           { SlangComboBox ComboBox
             MoveScaled(0,0,24,4)
             Visible = False
             Expand = True
             ReadOnly = True
-            List = [("zh,chi,zho (chinese)"), ("nl,dut,nld (dutch,flemish)"), ("en,eng (english)"), ("fi,fin (finnish)"), ("fr,fre (french)"), ("de,ger,deu (german)"), ("it,ita (italian)"), ("ja,jpn  (japanese)"), ("no,nor (norwegian)"), ("pt,por (portuguese)"), ("ru,rus (russian)"), ("es,spa (spanish)"), ("sv,swe (swedish)")]
+            List = [("alb,sq,(Albanian)"), ("ara,ar,(Arabic)"), ("arm,hy,(Armenian)"), ("baq,eu,(Basque)"), ("ben,bn,(Bengali)"), ("bos,bs,(Bosnian)"), ("bre,br,(Breton)"), ("bul,bg,(Bulgarian)"), ("cat,ca,(Catalan)"), ("cze,cs,(Czech)"), ("dan,da,(Danish)"), ("ger,deu,de (german)"), ("ell,el,(Greek)"), ("eng,en (english)"), ("epo,eo,(Esperanto)"), ("spa,esp (spanish)"), ("est,et,(Estonian)"), ("fin,fi (finnish)"), ("fre,fr (french)"), ("geo,ka,(Georgian)"), ("glg,gl,(Galician)"), ("heb,he,(Hebrew)"), ("hin,hi,(Hindi)"), ("hrv,hr,(Croatian)"), ("hun,hu,(Hungarian)"), ("ice,is,(Icelandic)"), ("ind,id,(Indonesian)"), ("ita,it (italian)"), ("jpn,ja (japanese)"), ("kaz,kk,(Kazakh)"), ("kor,ko,(Korean)"), ("lav,lv,(Latvian)")].Insert([("lit,lt,(Lithuanian)"), ("ltz,lb,(Luxembourgish)"), ("mac,mk,(Macedonian)"), ("may,ms,(Malay)"), ("dut,nld,nl (dutch,flemish)"), ("nor,no (norwegian)"), ("oci,oc,(Occitan)"), ("per,fa,(Farsi)"), ("pob,pb,(Portuguese-BR)"), ("pol,pl,(Polish)"), ("por,pt (portuguese)"), ("rus,ru (russian)"), ("rum,ro,(Romanian)"), ("scc,sr,(Serbian)"), ("sin,si,(Sinhalese)"), ("slo,sk,(Slovak)"), ("slv,sl,(Slovenian)"), ("swe,sv (swedish)"), ("syr,sy,(Syriac)"), ("tgl,tl,(Tagalog)"), ("tha,th,(Thai)"), ("tur,tr,(Turkish)"), ("ukr,uk,(Ukrainian)"), ("urd,ur,(Urdu)"), ("vie,vi,(Vietnamese)"), ("chi,zh,zho (chinese)")])
             Text = ("iso-8859-1")
           }
           { Button2 Button
